--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,11 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.liquibase:liquibase-core:4.5.0'
 
+    implementation "org.mapstruct:mapstruct:1.3.1.Final"
+    annotationProcessor "org.mapstruct:mapstruct-processor:1.3.1.Final"
+    
+    testAnnotationProcessor "org.mapstruct:mapstruct-processor:1.3.1.Final"
+
 }
 
 test {
