--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,8 @@ spring:
     url: "jdbc:postgresql://localhost:54320/postgres?currentSchema=public"
     username: postgres
     password: localPostgres
+
+internal:
+  cars:
+    max-year: ${INTERNAL_CARS_MAX_YEAR:10}
+    offset: ${INTERNAL_CARS_OFFSET:5}
